--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,22 @@
 				<groupId>org.bukkit</groupId>
 				<artifactId>bukkit</artifactId>
 				<version>1.8-R0.1-SNAPSHOT</version>
+				<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.newsclub</groupId>
+			<artifactId>junixsocket</artifactId>
+			<version>1.3</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>Spinalpack</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>1.5</version>
+				<version>2.3</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -37,9 +45,10 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<minimizeJar>true</minimizeJar>
 							<artifactSet>
 								<includes>
-									<include>junixsocket</include>
+									<include>org.newsclub:junixsocket</include>
 								</includes>
 							</artifactSet>
 						</configuration>
@@ -51,8 +60,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
