--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
 	<url>http://github.com/ParkerKemp/Spinalpack</url>
 	<repositories>
