--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
 		</repository>
+		<repository>
+			<id>spinalcraft-repo</id>
+			<url>http://maven.spinalcraft.com</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
