--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<version>1.3</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.spinalcraft</groupId>
+			<artifactId>UsernameHistory</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>Spinalpack</finalName>
