Added a new command
The new teamspeak command tells the players the teamspeak server
address.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,3 +23,8 @@ commands:
     usage: Usage - /donate
     permission: spinalpack.donate
     permission-message: No!
+  teamspeak:
+    description: Join Spinalcrafts Teamspeak server
+    usage: Usage - /teamspeak
+    permission: spinalpack.teamspeak
+    permission-message: No!
