--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
 	<groupId>com.spinalcraft</groupId>
 	<artifactId>Spinalpack</artifactId>
-	<version>1.1.0</version>
-	<name>Spinalpack</name>
+	<version>${projectVersion}</version>
+	<name>${projectName}</name>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
-	<url>http://github.com/ParkerKemp/Spinalpack</url>
+	<url>http://github.com/ParkerKemp/${projectName}</url>
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
@@ -34,12 +34,6 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.newsclub</groupId>
-			<artifactId>junixsocket</artifactId>
-			<version>1.3</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.spinalcraft</groupId>
 			<artifactId>UsernameHistory</artifactId>
 			<version>1.1</version>
@@ -48,7 +42,8 @@
 		<dependency>
 			<groupId>com.spinalcraft</groupId>
 			<artifactId>Skull</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.5</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
         	<groupId>com.sk89q</groupId>
@@ -58,7 +53,13 @@
     	</dependency>
 	</dependencies>
 	<build>
-		<finalName>Spinalpack</finalName>
+		<finalName>${projectName}</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources-filtered</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -74,13 +75,43 @@
 							<minimizeJar>true</minimizeJar>
 							<artifactSet>
 								<includes>
-									<include>com.spinalcraft:Skull</include>
-									<include>org.newsclub:junixsocket</include>
 								</includes>
 							</artifactSet>
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>src/main/resources/mvn.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+						<manifestEntries>
+							<Class-Path>../lib/Skull.jar</Class-Path>
+						</manifestEntries>
+					</archive>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
