Added parent pom.

--- a/pom.xml
+++ b/pom.xml
@@ -2,47 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<groupId>com.spinalcraft</groupId>
+    <parent>
+    	<groupId>com.spinalcraft</groupId>
+    	<artifactId>SpinalcraftParentPom</artifactId>
+    	<version>1.0.0</version>
+    </parent>
+    
 	<artifactId>Spinalpack</artifactId>
 	<version>1.1.2</version>
 	<name>Spinalpack</name>
+	
+	<repositories>
+		<repository>
+			<id>spinalcraft-repo</id>
+			<url>http://maven.spinalcraft.com</url>
+		</repository>
+	</repositories>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
-	<url>http://github.com/ParkerKemp/${project.name}</url>
-	<repositories>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>spinalcraft-repo</id>
-			<url>http://maven.spinalcraft.com</url>
-		</repository>
-		<repository>
-        	<id>sk89q-repo</id>
-        	<url>http://maven.sk89q.com/repo/</url>
-    	</repository>
-	</repositories>
 	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.9.2-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>com.spinalcraft</groupId>
 			<artifactId>UsernameHistory</artifactId>
 			<version>1.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.spinalcraft</groupId>
-			<artifactId>Skull</artifactId>
-			<version>1.0.6</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -52,75 +37,4 @@
         	<scope>provided</scope>
     	</dependency>
 	</dependencies>
-	<build>
-		<finalName>${project.name}</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources-filtered</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<minimizeJar>true</minimizeJar>
-							<artifactSet>
-								<includes>
-								</includes>
-							</artifactSet>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-						</manifest>
-						<manifestEntries>
-							<Class-Path>../lib/Skull.jar</Class-Path>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>1.0</version>
-			</extension>
-		</extensions>
-	</build>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>spinalcraft</id>
-			<name>Spinalcraft Repository</name>
-			<url>sftp://maven.spinalcraft.com/var/www/maven</url>
-			<layout>default</layout>
-		</repository>
-	</distributionManagement>
 </project>
