--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-    	<groupId>com.spinalcraft</groupId>
-    	<artifactId>SpinalcraftParentPom</artifactId>
-    	<version>1.0.0</version>
-    </parent>
-    
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.spinalcraft</groupId>
+		<artifactId>SpinalcraftParentPom</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+
 	<artifactId>Spinalpack</artifactId>
 	<version>1.1.2</version>
 	<name>Spinalpack</name>
-	
+
 	<repositories>
 		<repository>
 			<id>spinalcraft-repo</id>
 			<url>http://maven.spinalcraft.com</url>
 		</repository>
+		<repository>
+			<id>sk89q-repo</id>
+			<url>http://maven.sk89q.com/repo/</url>
+		</repository>
 	</repositories>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.javadoc.skip>true</maven.javadoc.skip>
-	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.spinalcraft</groupId>
@@ -31,10 +31,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-        	<groupId>com.sk89q</groupId>
-        	<artifactId>worldguard</artifactId>
-        	<version>6.1.1-SNAPSHOT</version>
-        	<scope>provided</scope>
-    	</dependency>
+			<groupId>com.sk89q</groupId>
+			<artifactId>worldguard</artifactId>
+			<version>6.1.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
