Update snapshots always.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 		<repository>
 			<id>spinalcraft-repo</id>
 			<url>http://maven.spinalcraft.com</url>
+			<snapshots>
+				<enabled />
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
 		</repository>
 		<repository>
 			<id>sk89q-repo</id>
